--- a/index.html
+++ b/index.html
@@ -161,6 +161,11 @@ th {
             <td>Bot kills the user then respwans</td>
             <td>a.killme</td>
         </tr>
+	<tr>
+            <td><b>leet</b></td>
+            <td>Bot leetifies the text</td>
+            <td>a.leet [leet]</td>
+        </tr>
         <tr>
             <td><b>math</b></td>
             <td>Bot will do the maths</td>
