--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ th {
 	<tr>
             <td><b>leet</b></td>
             <td>Bot leetifies the text</td>
-            <td>a.leet [leet]</td>
+            <td>a.leet [text]</td>
         </tr>
         <tr>
             <td><b>math</b></td>
