--- a/index.html
+++ b/index.html
@@ -176,6 +176,11 @@ th {
             <td>Bot sends a meme</td>
             <td>a.meme</td>
         </tr>
+	<tr>
+            <td><b>owotify</b></td>
+            <td>Bot owotifies the text</td>
+            <td>a.owotify [text]</td>
+        </tr>
         <tr>
             <td><b>say</b></td>
             <td>Bot says something you sent</td>
