--- a/index.html
+++ b/index.html
@@ -248,6 +248,11 @@ th {
             <td>Bot sends a fortune</td>
             <td>a.fortune</td>
         </tr>
+	<tr>
+            <td><b>hextorgb</b></td>
+            <td>Bot converts a hex code to RGB</td>
+            <td>a.hexttorgb [hex code]</td>
+        </tr>
         <tr>
             <td><b>ping</b></td>
             <td>Bot messages the bot latency and the API latency</td>
