--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ th {
 	<tr>
             <td><b>hextorgb</b></td>
             <td>Bot converts a hex code to RGB</td>
-            <td>a.hexttorgb [hex code]</td>
+            <td>a.hextorgb [hex code]</td>
         </tr>
         <tr>
             <td><b>ping</b></td>
