--- a/index.html
+++ b/index.html
@@ -181,6 +181,11 @@ th {
             <td>Bot owotifies the text</td>
             <td>a.owotify [text]</td>
         </tr>
+	<tr>
+            <td><b>personality</b></td>
+            <td>Bot checks the personality of a person</td>
+            <td>a.personality</td>
+        </tr>
         <tr>
             <td><b>say</b></td>
             <td>Bot says something you sent</td>
