--- a/index.html
+++ b/index.html
@@ -96,6 +96,19 @@ th {
 	margin: auto;
 	text-align: justify;
 }
+	
+.games {
+    background-color: #fcfcfc;
+	border-style: hidden;
+	border-radius: 50px;
+	padding: 5px 40px 40px 40px;
+	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+	font-family: Trebuchet MS;
+	font-size: 20px;
+	width: 80%;
+	margin: auto;
+	text-align: justify;
+}
 
 </style>
 <title>EarthumYBot Commands List</title>
@@ -135,22 +148,7 @@ th {
             <td><b>ascii</b></td>
             <td>Bot sends an ASCII version of what what word you sent</td>
             <td>a.ascii [text]</td>
-        </tr>
-        <tr>
-            <td><b>bingo</b></td>
-            <td>Bot plays a classic game of bingo</td>
-            <td>a.bingo</td>
-        </tr>
-        <tr>
-            <td><b>coinflip</b></td>
-            <td>Bot flips a coin</td>
-            <td>a.coinflip</td>
-        </tr>
-        <tr>
-            <td><b>dice</b></td>
-            <td>Bot rolls a dice</td>
-            <td>a.dice</td>
-        </tr>
+	</tr>
         <tr>
             <td><b>hello</b></td>
             <td>Bot messages "Hello there!"</td>
@@ -271,6 +269,38 @@ th {
     </table>
 </div>
 
+<br><br>
+<br><br>
+	
+<div class="games">
+    <center><h1>Game Commands</h1></center>
+    <p>Description: These are commands for games.</p>
+    <br>
+    <p style="color: red;"><b>Note:</b> [] = needed, () = optional, || = or</p>
+    <table>
+	<tr>
+            <th>Commands</th>
+            <th>Description of the Commands</th>
+            <th>Usage</th>
+        </tr>
+	<tr>
+            <td><b>bingo</b></td>
+            <td>Bot plays a classic game of bingo</td>
+            <td>a.bingo</td>
+        </tr>
+        <tr>
+            <td><b>coinflip</b></td>
+            <td>Bot flips a coin</td>
+            <td>a.coinflip</td>
+        </tr>
+        <tr>
+            <td><b>dice</b></td>
+            <td>Bot rolls a dice</td>
+            <td>a.dice</td>
+        </tr>
+    </table>
+</div>
+	
 <br><br>
 <br><br>
 
